@@ -89,7 +89,7 @@ multivariateRegModel <- mxModel("Multiple Regression -- Matrix Specification",
         labels=c("betaw","meanx","betay","meanz"),
         name="M"
     ),
-    mxRAMObjective("A","S","F","M")
+    mxRAMObjective("A","S","F","M",dimnames=c("w","x","y","z"))
 )
       
 multivariateRegFit<-mxRun(multivariateRegModel)
