@@ -19,7 +19,7 @@ library(OpenMx)
 model <- mxModel()
 model <- mxModel(model, mxMatrix("Full", values = c(0,0.2,0,0), name="A", nrow=2, ncol=2))
 model <- mxModel(model, mxMatrix("Symm", values = c(0.8,0,0,0.8), name="S", nrow=2, ncol=2, free=TRUE))
-model <- mxModel(model, mxMatrix("Iden", name="F", nrow=2, ncol=2))
+model <- mxModel(model, mxMatrix("Iden", name="F", nrow=2, ncol=2, dimnames = list(c('a','b'), c('a','b'))))
 
 model[["A"]]@free[2,1] <- TRUE
 model[["S"]]@free[2,1] <- FALSE
@@ -35,7 +35,7 @@ objective <- mxRAMObjective("A", "S", "F")
 
 # Define the observed covariance matrix
 covMatrix <- matrix( c(0.77642931, 0.39590663, 0.39590663, 0.49115615), 
-	nrow = 2, ncol = 2, byrow = TRUE)
+	nrow = 2, ncol = 2, byrow = TRUE, dimnames = list(c('a','b'), c('a','b')))
 
 data <- mxData(covMatrix, 'cov', numObs = 100)
 
